genium/src/test/resources/smoke/errors/output/lime/smoke/ErrorsInterface.lime
package smoke

interface ErrorsInterface {
    enum InternalError {
        ERROR_NONE,
        ERROR_FATAL
    }
    enum ExternalErrors {
        NONE,
        BOOM,
        BUST
    }

    exception InternalErrorException(InternalError)
    exception ExternalErrorsException(ExternalErrors)

    fun methodWithErrors() throws InternalErrorException
    fun methodWithExternalErrors() throws ExternalErrorsException
    fun methodWithErrorsAndReturnValue(): String throws InternalErrorException
}
